# cpp_tdd

./: .gitignore
c1/cliutils_gitlab_io/: CMakeLists.txt
c1/cliutils_gitlab_io/_buildVISUAL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
c1/cliutils_gitlab_io/_buildVISUAL/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
c1/cliutils_gitlab_io/_buildVISUAL/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
c1/crascit_com/: CMakeLists.txt
c1/externalLib/: CMakeLists.txt  main.cpp
c1/gtestExample/: CMakeLists.txt  main.cpp
c1/libCmakeTest/moja_biblioteka/: CMakeLists.txt
c1/libCmakeTest/moja_biblioteka/MainD/: CMakeLists.txt  main.cpp
c1/libCmakeTest/moja_biblioteka/libAppend/: CMakeLists.txt  appended.cpp  appended.h
c1/libCmakeTest/moja_biblioteka/libAppend/lib/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
c2/SoundexProject/: CMakeLists.txt
c2/SoundexProject/Soundex/: CMakeLists.txt  Soundex.cpp  Soundex.h
c2/SoundexProject/Soundex/headers/: Soundex.h
c2/SoundexProject/Soundex/src/: Soundex.cpp  main.cpp
c2/SoundexProject/SoundexLib/: CMakeLists.txt
c2/SoundexProject/SoundexLib/headers/: Soundex.h  new 1.txt
c2/SoundexProject/SoundexLib/src/: Soundex.cpp  main.cpp
c2/SoundexProject/SoundexTest/: CMakeLists.txt  SoundexTest.cpp  mainTest.cpp
c2/SoundexProject/googleTest/: CMakeLists.txt
c2/SoundexProject/main/: CMakeLists.txt
c2/SoundexProject/test_Soundex/testfoo/: .SoundexTest.cpp.swp  CMakeLists.txt  SoundexTest.cpp
c2/Soundex_test/: CMakeLists.txt  SoundexTest.cpp
c2/Soundex_test/Soundex/: main.cpp
c2/Soundex_test/test_Soundex/: CMakeLists.txt
c2/Soundex_test/test_Soundex/testfoo/: CMakeLists.txt  SoundexTest.cpp
c2_test/SoundexProject/: CMakeLists.txt  setEnv.bat
c2_test/SoundexProject/Soundex/: Soundex.cpp  Soundex.h  main.cpp
c2_test/SoundexProject/test_Soundex/testfoo/: SoundexTest.cpp
c5_test_double/: CMakeLists.txt  myVimSession.vim
c5_test_double/HttpGet/: CMakeLists.txt  HttpGetData.cpp  HttpGetData.h  IHttpGetData.h
c5_test_double/HttpGetTest/: CMakeLists.txt  HttpGetDataTest.cpp  mainTest.cpp
c5_test_double/main/: CMakeLists.txt  main.cpp
